fixed image margin on small size

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7026,7 +7026,7 @@ body {
 }
 .image-grid .row {
     max-width: 100%;
-    margin-bottom: 1rem;
+/*    margin-bottom: 1rem;*/
 }
 .image-grid .columns {
     padding-left: 0;
@@ -7062,6 +7062,10 @@ body {
     height: 50px;
     margin-right: 1rem;
     width: 50px;
+}
+
+.image {
+    margin-bottom: 1rem
 }
 .reveal-modal .info {
     padding: 2rem 1rem 0;
