--- a/src/css/photo-grid.css
+++ b/src/css/photo-grid.css
@@ -10,7 +10,7 @@
 }
 .image-grid .row {
     max-width: 100%;
-    margin-bottom: 1rem;
+/*    margin-bottom: 1rem;*/
 }
 .image-grid .columns {
     padding-left: 0;
@@ -46,4 +46,8 @@
     height: 50px;
     margin-right: 1rem;
     width: 50px;
+}
+
+.image {
+    margin-bottom: 1rem
 }
